crates/macros/tests/fail/union.stderr
error: FixedLayout on unions is not currently supported
 --> $DIR/union.rs:3:10
  |
3 | #[derive(FixedLayout)]
  |          ^^^^^^^^^^^
